--- a/css/style.css
+++ b/css/style.css
@@ -17,16 +17,14 @@ body {
    font-weight: bold;
 }
 
-
 .addNewTask {
    font-size: 20px;
    font-weight: bold;
    background: white;
-   padding: 20px;
-   margin: 2px 0px;
+   padding: 15px;
+   margin: 2px 0;
    display: flex;
    align-items: center;
-
 }
 
 .addNewTask__form {
@@ -35,11 +33,9 @@ body {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
-
 }
 
 .addNewTask__create {
-   display: flex;
    margin: 5px;
    flex-grow: 1;
 }
@@ -49,7 +45,8 @@ body {
    background-color: teal;
    padding: 5px;
    margin: 5px;
-   border: teal;
+   border: none;
+   justify-content: center;
 }
 
 .addNewTask__button:hover {
@@ -63,25 +60,32 @@ body {
    margin: 5px 0px 0px 0px
 }
 
-.tasksList__items {
+.tasksList__item {
    background: white;
    margin: 2px 0px;
    padding-left: 0;
-   
 }
 
-.tasksList__items--next {
+.tasksList__item--next {
    padding: 15px;
    list-style: none;
    border-bottom: 1px solid #eee;
    display: grid;
    grid-template-columns: auto 1fr auto;
    grid-gap: 20px;
+   align-items: center;
+}
+
+.taskList__item--done {
+   text-decoration: line-through;
 }
 
 .js-done {
    background: #1fbf1f;
+   color: white;
    border: none;
+   width: 25px;
+   height: 25px;
 }
 
 .js-done:hover {
@@ -91,6 +95,8 @@ body {
 .js-remove {
    background: #eb3e3e;
    border: none;
+   width: 25px;
+   height: 25px;
 }
 
 .js-remove:hover {
