--- a/css/list.css
+++ b/css/list.css
@@ -1,50 +1,47 @@
+.toDoList {
+   font-size: 20px;
+   background: #fff;
+}
+
 .tasksList {
-    font-size: 20px;
-    background: #fff;
-    padding: 15px;
-    margin: 5px 0px 0px;
- }
- 
- .tasksList__item {
-    background: #fff;
-    margin: 2px 0px;
-    padding-left: 0;
- }
- 
- .tasksList__item--next {
-    padding: 15px;
-    list-style: none;
-    border-bottom: 1px solid #eee;
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    grid-gap: 20px;
-    align-items: center;
- }
- 
- .taskList__item--done {
-    text-decoration: line-through;
- }
- 
- .js-done {
-    background: #1fbf1f;
-    color: #fff;
-    border: none;
-    width: 25px;
-    height: 25px;
- }
- 
- .js-done:hover {
-    background: #25dc25
- }
- 
- .js-remove {
-    background: #eb3e3e;
-    color:#fff;
-    border: none;
-    width: 25px;
-    height: 25px;
- }
- 
- .js-remove:hover {
-    background: #e45858
- }
+   list-style: none;
+   margin: 0;
+   padding: 0;
+}
+
+.tasksList__item {
+   display: grid;
+   grid-template-columns: auto 1fr auto;
+   grid-gap: 10px;
+   align-items: center;
+   padding: 10px;
+   border-bottom: 1px solid #ddd;
+}
+
+.taskList__item--done {
+   text-decoration: line-through;
+}
+
+.js-done {
+   background: #1fbf1f;
+   color: #fff;
+   border: none;
+   width: 25px;
+   height: 25px;
+}
+
+.js-done:hover {
+   background: #25dc25
+}
+
+.js-remove {
+   background: #eb3e3e;
+   color: #fff;
+   border: none;
+   width: 25px;
+   height: 25px;
+}
+
+.js-remove:hover {
+   background: #e45858
+}
