added to media query

--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,9 @@
 @media (max-width: 767px) {
     .addNewTask__form {
        grid-template-columns: 1fr;
-    }      
+    }    
+        
+    .addNewTask__button {
+      padding: 10px;
+    }
  }
