added bold titles and break word

--- a/css/list.css
+++ b/css/list.css
@@ -13,6 +13,10 @@
    border-bottom: 1px solid hsl(0, 0%, 87%);
 }
 
+.taskList__itemsText {
+   word-break: break-word;
+}
+
 .taskList__item--done {
    text-decoration: line-through;
 }
